# PS-walls

./: CMakeLists.txt  LICENSE  README.md  rebuild.bat
include/: AuthenticationManager.h  Common.h  DPAPI_Utils.h  InactivityMonitor.h  NiceError.h  Obfuscator.h  PowerShellWrapper.h  SecureLogger.h  ThreatDetector.h
ressources/: app.manifest  app.rc
src/: AuthenticationManager.cpp  Common.cpp  DPAPI_Utils.cpp  InactivityMonitor.cpp  NiceError.cpp  Obfuscator.cpp  PowerShellWrapper.cpp  SecureLogger.cpp  ThreatDetector.cpp  main.cpp
